--- a/Project1/SKA_dimension bolt.csproj
+++ b/Project1/SKA_dimension bolt.csproj
@@ -39,8 +39,8 @@
   <ItemGroup>
     <Reference Include="Akit5, Version=5.4.0.0, Culture=neutral, PublicKeyToken=a70cba4ef557ee03, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-      <HintPath>C:\Program Files (x86)\TeklaStructuresLearning\19.1\nt\bin\plugins\Akit5.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\..\..\..\..\TeklaStructures\19.0\nt\bin\plugins\Akit5.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -48,18 +48,19 @@
     <Reference Include="System.XML" />
     <Reference Include="Tekla.Structures, Version=19.1.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\TeklaStructuresLearning\19.1\nt\bin\plugins\Tekla.Structures.dll</HintPath>
+      <HintPath>..\..\..\..\..\TeklaStructures\19.0\nt\bin\plugins\Tekla.Structures.dll</HintPath>
     </Reference>
     <Reference Include="Tekla.Structures.Drawing, Version=19.1.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\TeklaStructuresLearning\19.1\nt\bin\plugins\Tekla.Structures.Drawing.dll</HintPath>
+      <HintPath>..\..\..\..\..\TeklaStructures\19.0\nt\bin\plugins\Tekla.Structures.Drawing.dll</HintPath>
     </Reference>
-    <Reference Include="Tekla.Structures.Geometry3d.Compatibility">
+    <Reference Include="Tekla.Structures.Geometry3d.Compatibility, Version=19.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\TeklaStructures\19.0\nt\bin\plugins\Tekla.Structures.Geometry3d.Compatibility.dll</HintPath>
     </Reference>
     <Reference Include="Tekla.Structures.Model, Version=19.1.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\TeklaStructuresLearning\19.1\nt\bin\plugins\Tekla.Structures.Model.dll</HintPath>
+      <HintPath>..\..\..\..\..\TeklaStructures\19.0\nt\bin\plugins\Tekla.Structures.Model.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
